test/sc++/error/eoshift-nonmesh.scpp
../../scc/error/eoshift-nonmesh.sc